Fix inline typesetting when output wraps.

--- a/scribble/minted.css
+++ b/scribble/minted.css
@@ -1,5 +1,5 @@
 .highlight-inline {
-    display: inline;
+    display: inline-table;
     margin: 0em;
     white-space: pre;
 }
